# NAI_openCV

./: .gitignore  README.md  main.cpp
Cascades/: CMakeLists.txt  main.cpp
Color_detection/: CMakeLists.txt  main.cpp
